# co-op-mode

./: .cursorignore  ProtoTypes.ts  README.md  TODO  doc.sh  docker-compose.yml  gen.sh  schema.prisma  schema.proto  setup-dev-links.bat  watch.sh
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  test.yaml
analytics/: .gitignore  Dockerfile  README.md  index.ts  package.json
analytics/prisma/: schema.prisma
analytics/src/: constants.ts  env.ts  main.ts  utility.ts
api/: .eslintrc.js  Dockerfile  README.md  index.ts  package.json  schema.proto  tsconfig.json  vitest.config.ts
api/prisma/: note.txt  schema.prisma
api/scripts/: inject_test_profiles.ts  proto.sh  test.ts
api/src/: env.ts  types.ts  version.ts
api/test/: test-results.xml
api_v2/: Cargo.toml  Dockerfile  build.rs
api_v2/src/: auth.rs  db.rs  error.rs  main.rs  models.rs  routes.rs
frontend/: .eslintrc.cjs  .firebaserc  README.md  firebase.json  global.d.ts  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/scripts/: installProto.sh  proto.sh
frontend/src/: env.ts  firebase.json  firebase.ts  index.sass  main.tsx  types.ts  version.ts
frontend/test/: test-results.xml
gateway/: .eslintrc.js  README.md  index.ts  package.json  tsconfig.json
gateway/src/: constants.ts  env.ts  main.ts  types.ts
notifications/: README.md  package.json
routines/: .eslintrc.cjs  .eslintrc.js  Dockerfile  README.md  index.ts  package.json
scripts/: README.md  doc.sh  frontend-routes.sh  gen.sh  lint-check.sh  prisma.sh  protos.sh
(+188 files in other folders)
