[package]
name = "api_v2"
version = "1.0.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.1"
dotenv = "0.15"
jsonwebtoken = "9.3.0"
protobuf = "3.5"
rocket = { version = "0.5.1", features = ["json"] }
sea-orm = { version = "0.11", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
cargo-watch = "8.5.2"

[build-dependencies]
protobuf-codegen = "3.5.1"
protoc-rust = "2.22"
protoc = "2.28.0"
